tests/compile-fail/Rule_10_6.rs
fn main() {
    let x: u16 = 1;
    let y: u16 = 2;
    let z: u32 = x + y;
    //~^ ERROR mismatched types
}
